# Wallpaper-House-2026

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
Walpaper-House-Admin-Panel/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
Walpaper-House-Admin-Panel/src/: App.tsx  index.css
Walpaper-House-Admin-Panel/src/hooks/: useAdminCategories.ts  useAdminStats.ts  useAdminWallpapers.ts  (+3 more)
docs/: signing.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/next-app/: pnpm-lock.yaml
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: cache.rs  display.rs  mod.rs  rotation.rs  tray.rs  wallpaper.rs
src/hooks/: useAnalytics.ts  useAuth.ts  useCategories.ts  useCollections.ts  useFavorites.ts  useFilters.ts  useReducedMotion.ts  useRotation.ts  useSearch.ts  useSettings.ts  useTheme.ts  useWallpapers.ts
src/lib/: motion.ts  supabase.ts
src/pages/: AnalyticsPage.tsx  Categories.tsx  Collections.tsx  Dashboard.tsx  Favorites.tsx  ProfilePage.tsx  SettingsPage.tsx
src/stores/: appStore.ts  authStore.ts  collectionsStore.ts  favoritesStore.ts  filtersStore.ts  localImagesStore.ts  settingsStore.ts  toastStore.ts
src/types/: database.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 001_create_tables.sql  002_create_indexes.sql  003_create_rls_policies.sql  004_create_triggers.sql  005_admin_setup.sql
(+93 files in other folders)
